# ObserverLib

./: CMakeLists.txt  README.md
include/: subject.h
tests/: observerLibTests.cpp
